--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ Made by Andras Csuri using:
 							<ul>
 								<li><a href="#intro">Intro</a></li>
 								<li><a href="#work">Work</a></li>
-								<li><a href="#about">About</a></li>
+								<li><a href="#about">About me</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
@@ -47,7 +47,7 @@ Made by Andras Csuri using:
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/lapt91c.jpg" alt="" /></span>
 								<p> I am doing my last year towards  my degree in Computing and IT, specialised in software engineering.
-As my degree is in reach, I am really excited to start working as a junior software developer, and really looking forward to learning more and more every day.
+As my degree is in reach, I am really excited to start working as a junior software developer, and looking forward to learning more and more every day.
 </p>
 <p>Currently I am focusing on c# and the ASP.NET framework using MVC architecture(please see details about my project under the 'Work' section). During my years in the university, I have also studied data science( SQL and  MongoDb), web apps, cloud technology, oop principles, java, python, software engineering and many more.
 </p>
