clickable project picture

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ Made by Andras Csuri using:
 						<nav>
 							<ul>
 								<li><a href="#intro">Intro</a></li>
-								<li><a href="#work">Work</a></li>
+								<li><a href="#work">My Project</a></li>
 								<li><a href="#about">About me</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
@@ -56,7 +56,10 @@ As my degree is in reach, I am really excited to start working as a junior softw
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Work</h2>
-								<span class="image main"><img src="images/tig.jpg" alt="" /></span>
+								<span class="image main">
+									<a href="https://weldertracker19072028.azurewebsites.net">
+									<img src="images/tig.jpg" alt="" /></span>
+								</a>
 							<a href="https://weldertracker19072028.azurewebsites.net" target="_blank"><h4 class="major">Welder Tracker</h4> </a>
 								<p>This application is developed for a manufacturing company to display
 									 the orders for the welders of the cell, and track productivity.
