--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ Made by Andras Csuri using:
 						<nav>
 							<ul>
 								<li><a href="#intro">Intro</a></li>
-								<li><a href="#work">My Project</a></li>
+								<li><a href="#work">Project</a></li>
 								<li><a href="#about">About me</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
