--- a/index.html
+++ b/index.html
@@ -56,7 +56,15 @@ As my degree is in reach, I am really excited to start working as a junior softw
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Work</h2>
-								<span class="image main">
+								<style>
+									.zoom {
+									  transition: transform .3s; /* Animation */
+									}
+									.zoom:hover {
+									  transform: scale(1.03); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+									}
+									</style>
+								<span class="image main zoom">
 									<a href="https://weldertracker19072028.azurewebsites.net">
 									<img src="images/tig.jpg" alt="" /></span>
 								</a>
