--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ As my degree is in reach, I am really excited to start working as a junior softw
 									</style>
 								<span class="image main zoom">
 									<a href="https://weldertracker19072028.azurewebsites.net">
-									<img src="images/tig.jpg" alt="" /></span>
+									<img src="images/tig2.jpg" alt="" /></span>
 								</a>
 							<a href="https://weldertracker19072028.azurewebsites.net" target="_blank"><h4 class="major">Welder Tracker</h4> </a>
 								<p>This application is developed for a manufacturing company to display
