--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ As my degree is in reach, I am really excited to start working as a junior softw
 									<img src="images/tig2.jpg" alt="" /></span>
 								</a>
 							<a href="https://weldertracker19072028.azurewebsites.net" target="_blank"><h4 class="major">Welder Tracker</h4> </a>
-								<p>This application is developed for a manufacturing company to display
+								<p><a href="https://weldertracker19072028.azurewebsites.net" target="_blank">This application</a> is developed for a manufacturing company to display
 									 the orders for the welders of the cell, and track productivity.
 									  Detailed description can be found under the about page of the application.
 									It is published on Azure under a free tier.</p>
@@ -362,7 +362,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p class="copyright">&copy Design: <a href="https://html5up.net">Andras Csuri based on Dimension</a>.</p>
 					</footer>
 
 			</div>
