--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ As my degree is in reach, I am really excited to start working as a junior softw
 
 								<ul class="icons">
 									<li><a href="https://www.linkedin.com/in/andras-csuri-895731198/" target="_blank" class="icon brands fa-linkedin"><span class="label">Twitter</span></a></li>
-									<li><a href="https://github.com/bandaror/Andras_Csuri_Portfolio-contact.git" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://github.com/bandaror?tab=repositories" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 
 								</ul>
 							</article>
